--- a/src/Metamoris/views/challenger/payment.html.twig
+++ b/src/Metamoris/views/challenger/payment.html.twig
@@ -207,7 +207,7 @@
                                                             height="30"
                                                             src="{{ app.conf.assets_url }}images/credit_cards@2.png"/>
                                                 </label></div>
-                                            <div style="float:left"
+                                            <!--<div style="float:left"
                                                  class="col-md-6"><label><input
                                                             class="ccbtn2"
                                                             type="radio"
@@ -216,7 +216,7 @@
                                                             width="94"
                                                             height="30"
                                                             src="{{ app.conf.assets_url }}images/paypal@2.png"/></label>
-                                            </div>
+                                            </div>-->
                                         </form>
 
                                     </div>
@@ -296,23 +296,23 @@
                                                             disabled selected>
                                                         Month
                                                     </option>
-                                                    <option value="1">01
+                                                    <option value="01">01
                                                     </option>
-                                                    <option value="2">02
+                                                    <option value="02">02
+                                                    </option
+                                                    <option value="03">03
                                                     </option>
-                                                    <option value="3">03
+                                                    <option value="04">04
                                                     </option>
-                                                    <option value="4">04
+                                                    <option value="05">05
                                                     </option>
-                                                    <option value="5">05
+                                                    <option value="06">06
                                                     </option>
-                                                    <option value="6">06
+                                                    <option value="07">07
                                                     </option>
-                                                    <option value="7">07
+                                                    <option value="08">08
                                                     </option>
-                                                    <option value="8">08
-                                                    </option>
-                                                    <option value="9">09
+                                                    <option value="09">09
                                                     </option>
                                                     <option value="10">10
                                                     </option>
@@ -340,19 +340,21 @@
                                                             disabled selected>
                                                         Year
                                                     </option>
-                                                    <option value="2">2015
+                                                    <option value="15">2015
                                                     </option>
-                                                    <option value="3">2016
+                                                    <option value="16">2016
                                                     </option>
-                                                    <option value="4">2018
+                                                    <option value="17">2017
                                                     </option>
-                                                    <option value="4">2019
+                                                    <option value="18">2018
                                                     </option>
-                                                    <option value="4">2020
+                                                    <option value="19">2019
                                                     </option>
-                                                    <option value="4">2021
+                                                    <option value="20">2020
                                                     </option>
-                                                    <option value="4">2022
+                                                    <option value="21">2021
+                                                    </option>
+                                                    <option value="22">2022
                                                     </option>
                                                 </select>
                                             </div>
