Ongoin fixes and new template

--- a/src/Metamoris/views/challenger/landing_page.html.twig
+++ b/src/Metamoris/views/challenger/landing_page.html.twig
@@ -675,7 +675,7 @@
             <h3 class="banner-heading font-alt">Got what it takes?</h3>
 
             <div class="local-scroll">
-                <a href="https://metamoris.com/challenger/register"
+                <a href="https://metamoris.com/challenger/createaccount"
                    target="_blank"
                    class="btn btn-mod btn-w btn-medium btn-round">Register
                     Now</a>
