--- a/src/Metamoris/views/email/confirm-email.twig
+++ b/src/Metamoris/views/email/confirm-email.twig
@@ -213,7 +213,7 @@ If you have any questions please email us at info@metamoris.com Thank you, now g
                                                     <td>
                                                         <div class="contentEditableContainer contentImageEditable">
                                                             <div class="contentEditable">
-                                                                <img src="images/bigImg.jpg"
+                                                                <img src="https://metamoris.com/challenger/web/email/bigImg.jpg"
                                                                      alt='featured image'
                                                                      data-default="placeholder"
                                                                      data-max-width="750"
@@ -270,7 +270,8 @@ If you have any questions please email us at info@metamoris.com Thank you, now g
                                                                     please
                                                                     follow the
                                                                     link below:
-
+                                                                    <br/>
+                                                                    <br/>
                                                                     <a href="{{ confirmationUrl }}">click
                                                                         here to
                                                                         confirm
@@ -405,7 +406,7 @@ If you have any questions please email us at info@metamoris.com Thank you, now g
                                                         align='center'>
                                                         <div class="contentEditableContainer contentTextEditable">
                                                             <div class="contentEditable">
-                                                                <img src="images/logo.png">
+                                                                <img src="https://metamoris.com/challenger/web/email/logo.png">
 
                                                                 <a href="https://www.facebook.com/metamoris"
                                                                    title="Facebook"
