--- a/src/Metamoris/views/partials/tab_forms/login_form.html.twig
+++ b/src/Metamoris/views/partials/tab_forms/login_form.html.twig
@@ -6,8 +6,7 @@
         <div class="alert alert-danger">{{ error|nl2br }}</div>
     {% endif %}
     <!-- Intro text -->
-    <p class="intro"><b>Hi there.</b> Login with your favorite social network or
-        registration account to access our user area and great community!</p>
+    <p class="intro"><b>Already signed up for the Challenger?</b></p>
     <!-- Form fields -->
     <form action="{{ path('challenger_registration_login_check') }}" id="login"
           method="post">
