--- a/src/Metamoris/views/challenger/payment.html.twig
+++ b/src/Metamoris/views/challenger/payment.html.twig
@@ -32,7 +32,7 @@
                         <span class="head_logo_left"><img
                                     src="{{ app.conf.assets_url }}images/logo.png"/></span>
 
-                        <h2 class="form-login-heading">METAMORIS:<span>QUALIFIER REGISTRATION</span>
+                        <h2 class="form-login-heading">METAMORIS <span>CHALLENGER REGISTRATION</span>
                         </h2>
                     </div>
 
