--- a/src/Metamoris/views/challenger/payment.html.twig
+++ b/src/Metamoris/views/challenger/payment.html.twig
@@ -279,7 +279,7 @@
                                             <input type="text" id="card_number"
                                                    name="card_number"
                                                    placeholder="Credit Card number"
-                                                   maxlength="16" required/>
+                                                   max="16" min="16" required/>
                                             <span class="entypo-credit-card icon"></span>
                                         </fieldset>
                                         <!--/ .input-cardnumber-->
