--- a/src/Metamoris/views/partials/tab_forms/register_form.html.twig
+++ b/src/Metamoris/views/partials/tab_forms/register_form.html.twig
@@ -1,9 +1,10 @@
 <!-- Register form -->
 <div class="register-form">
     <!-- Title -->
-    <div class="title">Metamoris Challenger Registration</div>
+    <div style="width: 250px; margin: 0 auto;"><img width="250" src="{{ app.conf.assets_url }}images/logo_reg.png"></div>
+    <div class="title" style="margin-top: 15px;font-size: 25px;">Create Account</div>
     <!-- Intro text -->
-    <p class="intro"><b>North American Challenger 2015;</b> secure your spot now!</p>
+    <p class="intro" style="margin: 5px 0px 10px 1px;"><b>North American Challenger 2015;</b> <span style="color:#000;">secure your spot now!</span></p>
     <!-- Form fields -->
     <form action="{{ app.request_stack.getMasterRequest.getRequestUri }}"
           name="register" id="register-form" method="post">
@@ -33,11 +34,10 @@
         <!-- Sliding checkbox 3 -->
         <div class="field">
             <p class="ratings w-75 mr-5"><span
-                        class="entypo-paper-plane"></span>Signup for weekly
-                newsletter?</p>
+                        class="entypo-paper-plane"></span>Signup for our newsletter?</p>
 
             <div class="slide-chk w-20">
-                <input type="checkbox" id="newsletter-signup"
+                <input type="checkbox"  checked id="newsletter-signup"
                        name="register_form[newsletter]"/>
                 <label for="newsletter-signup"></label>
             </div>
