--- a/src/Metamoris/views/challenger/landing_page.html.twig
+++ b/src/Metamoris/views/challenger/landing_page.html.twig
@@ -64,7 +64,7 @@
                             <div class="local-scroll">
                                 <a href="#about" class="btn btn-mod btn-w btn-medium btn-round hidden-xs">Learn More</a>
                                 <span class="hidden-xs">&nbsp;</span>
-                                <a href="{{ path('challenger.tabs.createaccount') }}" class="btn btn-mod btn-w btn-medium btn-round lightbox mfp-iframe">Register Now</a>
+                                <a target="_blank" href="{{ path('challenger.tabs.createaccount') }}" class="btn btn-mod btn-w btn-medium btn-round">Register Now</a>
                             </div>
                             
                         </div>
