--- a/src/Metamoris/views/challenger/registration.html.twig
+++ b/src/Metamoris/views/challenger/registration.html.twig
@@ -602,11 +602,11 @@
 
                                     <div class="col-md-4 col-sm-4">
                                         <fieldset class="input-block">
-                                            <label for="zip-code">Zip
+                                            <label for="city">Zip
                                                 Code</label>
-                                            <input type="text" id="zip-code"
-                                                   name="zip_code"
-                                                   placeholder="Code" required/>
+                                            <input type="text" id="city"
+                                                   name="city"
+                                                   placeholder="City" required/>
                                             <span class="entypo-home icon"></span>
                                         </fieldset>
                                         <!--/ .code-->
@@ -770,8 +770,19 @@
                                 <!--/ .row-->
 
                                 <div class="row">
+                                    <div class="col-md-4 col-sm-4">
+                                        <fieldset class="input-block">
+                                            <label for="zip-code">Zip
+                                                Code</label>
+                                            <input type="text" id="zip-code"
+                                                   name="zip_code"
+                                                   placeholder="Code" required/>
+                                            <span class="entypo-home icon"></span>
+                                        </fieldset>
+                                        <!--/ .code-->
+                                    </div>
 
-                                    <div class="col-md-12 col-sm-12">
+                                    <div class="col-md-8 col-sm-8">
                                         <div class="input-block">
                                             <label>Select Country</label>
 
