--- a/src/Metamoris/views/challenger/payment.html.twig
+++ b/src/Metamoris/views/challenger/payment.html.twig
@@ -161,12 +161,12 @@
 
                                     <div class="col-md-6 weightselect">
                                         <fieldset class="input-block">
-                                            <label for="weight-class">Select weight class:</label>
+                                            <label for="weight_class">Select weight class:</label>
 
                                             <div class="dropdown">
                                                 <select name="weight_class"
                                                         class="dropdown-select"
-                                                        id="weight-class"
+                                                        id="weight_class"
                                                         disabled>
                                                     <option value="" disabled
                                                             selected>Select a
@@ -226,10 +226,10 @@
                                 <div class="row">
                                     <div class="col-md-6 col-sm-6">
                                         <fieldset class="input-block">
-                                            <label for="card-type">Card Type</label>
+                                            <label for="card_type">Card Type</label>
 
                                             <div class="dropdown">
-                                                <select id="card-type" name="card_type"
+                                                <select id="card_type" name="card_type"
                                                         class="dropdown-select">
                                                     <option value="none"
                                                             disabled selected>
@@ -261,9 +261,9 @@
                                     <div class="col-md-12 col-sm-12"
                                          style="position: inherit;">
                                         <fieldset class="input-block">
-                                            <label for="card-holder">Card Holder
+                                            <label for="card_holder">Card Holder
                                                 Name</label>
-                                            <input type="text" id="card-holder"
+                                            <input type="text" id="card_holder"
                                                    class=""
                                                    name="card_holder"
                                                    placeholder="e.g. John Smith"
