Changes to login registered

--- a/src/Metamoris/views/challenger/registration.html.twig
+++ b/src/Metamoris/views/challenger/registration.html.twig
@@ -602,8 +602,7 @@
 
                                     <div class="col-md-4 col-sm-4">
                                         <fieldset class="input-block">
-                                            <label for="city">Zip
-                                                Code</label>
+                                            <label for="city">City</label>
                                             <input type="text" id="city"
                                                    name="city"
                                                    placeholder="City" required/>
@@ -768,6 +767,18 @@
 
                                 </div>
                                 <!--/ .row-->
+                                <div class="row">
+                                    <div class="col-md-12 col-sm-12">
+                                        <fieldset class="input-block">
+                                            <label for="province">Province</label>
+                                            <input type="text" id="province"
+                                                   name="province"
+                                                   placeholder="Province"/>
+                                            <span class="entypo-home icon"></span>
+                                        </fieldset>
+                                        <!--/ .code-->
+                                    </div>
+                                    </div>
 
                                 <div class="row">
                                     <div class="col-md-4 col-sm-4">
