--- a/src/Metamoris/views/email/confirm-email.twig
+++ b/src/Metamoris/views/email/confirm-email.twig
@@ -7,7 +7,7 @@ Variables passed to this template:
 
 {# The subject line. #}
 {%- block subject -%}{%- autoescape false -%}
-Welcome to Noth American Challenger! Please confirm your email.
+Welcome to North American Challenger! Please confirm your email.
 {%- endautoescape -%}{%- endblock -%}
 
 {# The plain text message. #}
