--- a/src/Metamoris/views/partials/tab_forms/register_form.html.twig
+++ b/src/Metamoris/views/partials/tab_forms/register_form.html.twig
@@ -44,6 +44,10 @@
         </div>
         <div class="clrfx mt-10 mb-30 bt"></div>
         <!-- Terms agree button -->
+        <div class="w-47 mr-5 mt-5">
+            <input type="checkbox" id="terms-agree" name="terms-agree" checked="checked" />
+            <label for="terms-agree" class="tick"><span>I agree with <a href="#terms-popup">Terms &amp; Conditions</a></span></label>
+        </div>
         <!-- Send button -->
         <input type="submit" value="Register" class="send"/>
 
