--- a/src/Metamoris/views/partials/tac.html.twig
+++ b/src/Metamoris/views/partials/tac.html.twig
@@ -4,28 +4,327 @@
 
     <div>
         <a href="#close" class="close entypo-cancel-circled"></a>
+<p>
+        Metamoris.com & Metamoris Challenger League
 
-        <div class="title">Terms &amp; Conditions</div>
-        <p class="intro"><b>1. Lorem ipsum</b><br/>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-            commodo ligula eget dolor.<br/>
-            Aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-            montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-            pellentesque eu, pretium quis, sem.</p>
+        Terms of Use
 
-        <p class="intro"><b>2. Dolor commodo</b><br/>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-            commodo ligula eget dolor. Aenean massa. Cum sociis natoque
-            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
-        </p>
+        The registration fee of $125.00 is non-refundable and competition spots are non-
 
-        <p class="intro"><b>3. Sit amet</b><br/>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-            commodo ligula eget dolor.<br/>
-            Aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-            montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-            pellentesque eu, pretium quis, sem.</p>
+        You will be required to weigh in at every event to make sure you “make weight”, not
+
+        making weight will disqualify you from the competition with or without warning. Be
+
+        sure you are capable of making a certain weight before you sign up for that division.
+
+        We reserve the right to change any and all details pertaining to your matches
+
+        including but not limited to; scheduling, opponents, locations, media distribution
+
+        and any other details associated with the execution of matches at any level of the
+
+        competition circuit.
+
+        Metamoris “North American”
+
+        Challenger League 2015
+
+        Rules and Information
+
+        1. General Info & Etiquette
+
+        a. Must be 18 years or older to enter
+
+        b. Advanced grapplers only (brown belt or black belt in BJJ or equal experience in other
+
+        grappling styles.
+
+        c. Per event each Competitor will be allowed only one person to accompany them at the location
+
+        specified.
+
+        d. Arrive no later than 5 minutes after or no more than 30 minutes before your scheduled
+
+        “call time”.
+
+        e. Check in at the front desk of the facility for further instructions on where to wait and warm
+
+        up for your match.
+
+        f. Be sure to have your Metamoris confirmation # and a valid form of identification.
+
+        g. If you are more than 5 minutes late to your “call time” the Event Manager will disqualify you
+
+        immediately.
+
+        h. Past/current Metamoris Pro athletes excluded from entering any Metamoris
+
+        Challenger circuit.
+
+        i. You will be required to weigh in at every event to make sure you “make weight”, not making
+
+        weight will disqualify you from the competition. If there is an open spot in another weight
+
+        class the location manager can decide to move you to that other weight if he/she so chooses.
+
+        2. Weight Classes (divisions)
+
+        a. Women’s Division OPENWEIGHT
+
+        b. Up to 155 lbs WELTERWEIGHT
+
+        c. 156-175 lbs MIDDLE WEIGHT
+
+        d. 176-195 lbs LIGHT HEAVYWEIGHT
+
+        e. 196-225 lbs HEAVYWEIGHT
+
+        f. 225+ lbs SUPER HEAVYWEIGHT 
+
+        3. Round Robin Factors
+
+        The only way to guarantee your success in every round is to win every match by submission, any loss or a draw
+
+        will limit your potential for success.
+
+        a. RULE #1: Most submissions wins
+
+         The person with the most submissions in any group wins and will continue to the next
+
+        round.
+
+        b. RULE #1: King of The Hill
+
+         In the case of a tiebreaker where two athletes have an equal amount of submissions, the
+
+        athlete with a victory over the other will move on.
+
+        c. RULE #2: Tiebreaker
+
+         In the case where two athletes are tied for submissions and a draw occurs between the
+
+        tied competitors the athlete with the fastest submission of that day moves on.
+
+        d. RULE #3: Injury
+
+         In the case of an injury where one athlete is forced to exit the round robin the remaining
+
+        athletes will form a smaller round robin and continue to face off one at a time.
+
+         In the case of an injury caused by a submission the competitor responsible for the
+
+        submission will get a submission point and the round robin will continue without the
+
+        injured competitor.
+
+        e. RULE #4: Elimination by Draw
+
+         In the case of every match ending in a draw within a single group all athletes in that
+
+        group are eliminated from the competition for good.
+
+        a. Competition Format / Time limit
+
+         10-minute rounds
+
+         The Referee will stop the clock if:
+
+        o A groin shot occurs
+
+        o An Athlete is poked in the eye
+
+        o An Athlete is bleeding or appears to be injured
+
+         The clock will begin again when both Athletes can continue.  If more than 5-minutes is
+
+        required to stop an Athlete’s bleeding, or for an Athlete to recover from a groin shot or an eye
+
+        poke, the match will be cancelled and no decision will be awarded to either Athlete (unless
+
+        the Referee determines that an Illegal Action was intentional, which could result in the
+
+        disqualification of an Athlete, and a decision victory being awarded to the Athlete not so
+
+        disqualified)
+
+        b. Win By Submission:
+
+         Definition:
+
+         Method:
+
+         An athlete is forced to give up due to the inherent pain, danger or complete
+
+        lack of mobility of their position.
+
+         Loud yelling to signify giving up or eminent injury
+
+         Tapping out on the mat or anywhere else with any body part
+
+         Verbal submission at any point during the match
+
+        c. Re-positioning
+
+         In the event one or more of the Athletes get close to the “out of bounds” line, the Referee will
+
+        verbally ask them to “STOP” and direct the Athletes to move into the same position they were
+
+        in prior to the stoppage, at the center of the mat, provided that in the event one Athlete has
+
+        the other Athlete in a submission hold, and the Athlete in the submission hold causes one or
+
+        both Athletes to approach the “out of bounds” line in order to attempt to escape an impending
+
+        submission, the Referee may use Referee’s discretion in determining whether to reposition
+
+        the Athletes in the center of the mat, grant a submission win, or disqualify the athlete trying
+
+        to escape the competition area. If possible, the Referee will attempt to move athletes while
+
+        preserving any position held. If position is lost in movement or any other way the referee will
+
+        have ultimate decision-making power to begin the match again from any position at any point
+
+        in time.
+
+        d. Illegal Actions (Immediate Disqualification)
+
+         Striking of any kind (including groin shots)
+
+         Attempting to escape the designated match area to “force” out of bounds (immediate
+
+        disqualification)
+
+         Slamming (from the top guard position)
+
+         Heel hooks (excluding No-Gi matches, in which hooks are permitted)
+
+         Biting
+
+         Eye gouging
+
+         Clawing, twisting, scratching or pinching the skin
+
+         Finger bending or toe bending
+
+         Using the belt to strangle (in Gi matches)
+
+         Spitting at an opponent
+
+         Fish hooking
+
+         Putting a finger into any orifice or any cut or laceration of an opponent
+
+         Trachea pinching (excluding full hand to throat squeeze).
+
+         Grabbing the ear(s)
+
+         Pulling the hair
+
+         Slippery foreign substances applied to an Athlete’s body or clothing
+
+         Takedown directly on the head anything close to a 180-degree angle (a.k.a. spiking)
+
+        e. Athletes’ Uniform/Equipment
+
+         A “Grappling uniform” (NO-GI) should consist of board shorts or compression sport
+
+        shorts/pants that fit tightly around the Athletes waist, with no pockets or pockets that are
+
+        sewn shut, and a rash-guard or dry-fit/athletic shirt that is also fit to the Athlete’s upper body
+
+         Mouthpiece and cup are optional
+
+         Wrestling shoes are optional
+
+         Tape is optional on fingers, toes, ankles and wrists
+
+         Female Athletes cannot wear cups
+
+        5. Sportsmanship
+
+        A professional Athlete should always conduct himself with the highest level of self-respect and respect for
+
+        others, especially his / her opponents.
+
+        As an ambassador to the art of Grappling and Metamoris, there should be a certain level of cleanliness and
+
+        “style” to an Athlete’s personal appearance.
+
+        The following will be expected at and around the event date:
+
+         Clean clothing
+
+         Impeccable personal hygiene
+
+         No piercing or jewelry including wrist bands or bracelets
+
+         Sportsmanship with all other competitors
+
+         Cooperation with Metamoris staff
+
+         Arriving at the time specified for your arrival to any official Metamoris functions
+
+         Having 2 clean uniforms for the event
+
+        The following will not be tolerated of Athlete or any member of Athlete’s Team, and could lead to a disqualification
+
+        or dismissal of Athlete with or without a warning:
+
+         Foul language
+
+         Never step on the mat with your shoes on and always wear your shoes while walking outside the mat
+
+        area. Never walk around with a bare chest.
+
+         Respect everyone in the room at all times.
+
+         If your competition uniform is torn or dirty the Event Manager will disqualify you immediately.
+
+         Remove all jewelry before any of your matches.
+
+         Be aware of your appearance. You should be clean and neat. Long hair must be tied back. Keep
+
+        fingernails and toenails clipped, hand and feet always clean. 
+
+         No skin infections such as ring worm or staph infections of any kind will be tolerated.
+
+         No food or drinks are allowed inside the venue, except drinks with a twist on cap.
+
+         Keep the changing rooms and spectator’s area clean and orderly.
+
+         Follow rules of good sportsmanship before, during and after each match. If you cannot comply with
+
+        this rule, you will be disqualified from the competition.
+
+         No foul language will be tolerated.
+
+         Place cell phones on vibrate or silent mode.
+
+         Excessive “Trash Talking”
+
+         Sexual harassment
+
+         Racial or other unlawful discrimination
+
+         Tardiness to official Metamoris functions
+
+         Unsportsmanlike conduct in any form
+
+         Use of illegal drugs
+
+         Any drug abuse
+
+         Dirty clothing
+
+         Dirty uniforms
+
+         Disparaging statements in any form about any of: Metamoris, its principals, officers, directors,
+
+        employees, contractors, managers, agents and other representatives, any Event’s Referees,  sponsors,
+
+        vendors, venues, other Athletes or members of another Athlete’s team.
+</p>
     </div>
 </div>
 <!-- / Terms and conditions -->
