--- a/src/Metamoris/views/email/reset-password.twig
+++ b/src/Metamoris/views/email/reset-password.twig
@@ -32,22 +32,303 @@ disregard this email.
 
 {# The HTML message. Optional. #}
 {%- block body_html -%}
+    <html>
+    <head>
 
-    <h1>Reset your password</h1>
+        <style type="text/css">
+            @import url(http://fonts.googleapis.com/css?family=Dosis:300,400,700);
+            @media only screen
+            and (min-device-width : 375px)
+            and (max-device-width : 667px) { /* STYLES GO HERE */}
+            body {
+                padding-top: 0 !important;
+                padding-bottom: 0 !important;
+                padding-top: 0 !important;
+                padding-bottom: 0 !important;
+                margin:0 !important;
+                -webkit-text-size-adjust: 100% !important;
+                -ms-text-size-adjust: 100% !important;
+                -webkit-font-smoothing: antialiased !important;
+                font-family: Dosis, arial, sans-serif;
+            }
+            .tableContent img {
+                border: 0 !important;
+                display: block !important;
+                outline: none !important;
+            }
+            a{
+                color:#000;
+            }
 
-    <p>
-        Please <a href="{{ resetUrl }}">click here to reset your password</a>.
-    </p>
+            p, h2,li{
+                color:#4C4C4C;
+                margin:0;
+                font-family: arial, sans-serif;
+                font-weight: 400;
+                letter-spacing: 0.1em;
+                font-size:12px;
+            }
 
-    <hr style="margin-top: 30px;"/>
-    <p style="font-size: 13px;">
-        <strong>Didn't ask to reset your password?</strong>
-        <br/>
-        If you didn't ask to reset your password, it's likely that
-        another user entered your username or email address by mistake
-        while trying to reset their password. If that's the case, you
-        don't need to take any further action and you can safely
-        disregard this email.
-    </p>
+            div,p,ul,h2{
+                margin:0;
+            }
+            h2{
+                color: #000;
+                font-size: 20px;
+                font-family: dosis, arial, sans-serif;
+                margin-top: 0;
+                position: relative;
+                text-transform: uppercase;
+                letter-spacing: 0.2em;
+                line-height: 1.8;
+                opacity: .9;
+            }
+            p{
+
+            }
+            a.link1{
+                font-weight:bold;
+                color:#DAB679;
+                font-size:13px;
+                text-decoration:none;
+                font-family: arial, sans-serif;
+                font-weight: 400;
+                letter-spacing: 0.1em;
+            }
+            a.link2{
+                padding: 8px 20px;
+                border-radius: 5px;
+                -moz-border-radius: 5px;
+                -webkit-border-radius: 5px;
+                color: #FFF;
+                font-size: 13px;
+                font-weight: bold;
+                text-decoration: none;
+                font-weight: bold;
+                background: red;
+                font-family: arial, sans-serif;
+                font-weight: 400;
+                letter-spacing: 0.1em;
+
+            }
+        </style>
+        <script type="colorScheme" class="swatch active">
+  {
+    "name":"Default",
+    "bgBody":"ffffff",
+    "link":"DAB679",
+    "color":"ffffff",
+    "bgItem":"000000",
+    "title":"DAB679"
+  }
+</script>
+
+    </head>
+    <body paddingwidth="0" paddingheight="0" bgcolor="#d1d3d4"  style="padding-top: 0; padding-bottom: 0; padding-top: 0; padding-bottom: 0; background-repeat: repeat; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -webkit-font-smoothing: antialiased;" offset="0" toppadding="0" leftpadding="0">
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tableContent bgBody" align="center" bgcolor="#ffffff" style='font-family: arial, sans-serif;'>
+
+        <tr>
+            <td valign='top' >
+                <table  width="750" border="0" cellspacing="0" cellpadding="0" align="center" style='font-family: arial, sans-serif;' bgcolor='#ffffff'>
+                    <tr>
+                        <td width='20'>&nbsp;</td>
+                        <td>
+                            <table width="750" border="0" cellspacing="0" cellpadding="0" align="center">
+                                <!--  =========================== The header ===========================  -->
+
+
+                                <!--  =========================== The body ===========================  -->
+                                <tr>
+                                    <td class='movableContentContainer bgItem'>
+                                        <!--  ==== movable content in the body ===  -->
+
+                                        <div class='movableContent'>
+                                            <table width="750" border="0" cellspacing="0" cellpadding="0" align="center" >
+                                                <tr><td height='25'>&nbsp;</td></tr>
+                                                <tr>
+                                                    <td>
+                                                        <table width="750" border="0" cellspacing="0" cellpadding="0" align="center" >
+                                                            <tr>
+
+                                                                <td align='right' valign='top' >
+                                                                    <div class="contentEditableContainer contentTextEditable" style='display:inline-block;'>
+                                                                        <div class="contentEditable" >
+                                                                            <a target='_blank' href="[SHOWEMAIL]" style='color:#000;font-size:13px;text-decoration:none;'>Open in your browser→</a>
+                                                                        </div>
+                                                                    </div>
+                                                                </td>
+
+                                                            </tr>
+                                                        </table>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+
+                                        <div class='movableContent'>
+                                            <table width="0" border="0" cellspacing="0" cellpadding="0" align="center" >
+                                                <tr><td height='25'>&nbsp;</td></tr>
+                                                <tr>
+                                                    <td>
+                                                        <div class="contentEditableContainer contentImageEditable">
+                                                            <div class="contentEditable" >
+                                                                <img src="https://metamoris.com/challenger/web/email/bigImg.jpg" alt='featured image' data-default="placeholder" data-max-width="750" width='600' height=''>
+                                                            </div>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <tr><td height='25'>&nbsp;</td></tr>
+                                            </table>
+                                        </div>
+
+                                        <div class='movableContent'>
+                                            <table width="560" border="0" cellspacing="0" cellpadding="0" align="center" >
+                                                <tr><td height='10'>&nbsp;</td></tr>
+                                                <tr>
+                                                    <td align='left' valign='top'>
+                                                        <div class="contentEditableContainer contentTextEditable">
+                                                            <div class="contentEditable" >
+                                                                <h2>OSS [first name],</h2>
+                                                            </div>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <tr><td height='15'>&nbsp;</td></tr>
+                                                <tr>
+                                                    <td align='left' valign='top'>
+                                                        <div class="contentEditableContainer contentTextEditable">
+                                                            <div class="contentEditable" >
+                                                                <p style="font-size:12px;">
+                                                                    Looks like you forgot your password! <br><br>
+                                                                    Please click on the link below to reset your account password.
+                                                                </p>
+                                                                <p style='font-size:12px; padding:20px;'>
+
+                                                                    Please <a href="{{ resetUrl }}">click here to reset your password</a>.
+
+                                                                    <br>
+
+
+                                                                </p>
+                                                                <p style="font-size:12px;">
+                                                                    After clicking the link above, you will be directed to a page where you will input your new password.
+                                                                    If you have any questions please email us at <a href="mailto:info@metamoris.com">info@metamoris.com</a>
+                                                                    Thank you, now go train!<br><br><br><br>
+
+                                                                    -Metamoris Team
+                                                                </p>
+                                                            </div>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+
+
+                                        <div class='movableContent'>
+                                            <table width="558" border="0" cellspacing="0" cellpadding="0" align="center" >
+                                                <tr><td height='40'>&nbsp;</td></tr>
+                                                <tr>
+                                                    <td style=''>
+                                                        <table width="558" border="0" cellspacing="0" cellpadding="0" align="center">
+                                                            <tr><td height='25' colspan='3'></td></tr>
+                                                            <tr>
+                                                                <td width='30'></td>
+                                                                <td width='750' align='left' valign='top'>
+
+                                                                    <div class="contentEditableContainer contentTextEditable">
+                                                                        <div class="contentEditable" >
+
+                                                                        </div>
+                                                                    </div>
+                                                                </td>
+                                                                <td width='25'></td>
+                                                            </tr>
+                                                            <tr><td height='8' colspan='3'></td></tr>
+                                                            <tr>
+                                                                <td width='30'></td>
+                                                                <td width='503' align='left' valign='top'>
+                                                                    <div class="contentEditableContainer contentTextEditable">
+                                                                        <div class="contentEditable" >
+
+                                                                        </div>
+                                                                    </div>
+                                                                </td>
+                                                                <td width='25'></td>
+                                                            </tr>
+                                                            <tr><td height='25' colspan='3'>&nbsp;</td></tr>
+                                                            <tr>
+                                                                <td width='30'></td>
+                                                                <td width='503' align='right' valign='top'>
+                                                                    <div class="contentEditableContainer contentTextEditable">
+                                                                        <div class="contentEditable" >
+
+                                                                        </div>
+                                                                    </div>
+                                                                </td>
+                                                                <td width='25'></td>
+                                                            </tr>
+                                                            <tr><td height='25' colspan='3'></td></tr>
+                                                        </table>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+
+
+
+
+
+
+                                        <div class='movableContent'>
+                                            <table width="560" border="0" cellspacing="0" cellpadding="0" align="center">
+                                                <tr><td height='28'></td></tr>
+                                                <tr>
+                                                    <td valign='top' align='center'>
+                                                        <div class="contentEditableContainer contentTextEditable">
+                                                            <div class="contentEditable" >
+                                                                <img src="https://metamoris.com/challenger/web/email/logo.png">
+
+                                                                <a href="https://www.facebook.com/metamoris" title="Facebook" target="_blank">Facebook</a>
+                                                                <a href="https://twitter.com/metamorispro" title="Twitter" target="_blank">Twitter</a>
+                                                                <a href="https://instagram.com/metamoris" title="Instragram" target="_blank">Instagram</a><br><br>
+                                                                <p style='color:#000;'>&copy; Metamoris International Inc 2015</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="contentEditableContainer contentTextEditable">
+                                                            <div class="contentEditable" >
+                                                                <p style='color:#000;font-size:12px;'>
+                                                                </p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="contentEditableContainer contentTextEditable">
+                                                            <div class="contentEditable" >
+                                                            </div>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
+
+                                    </td>
+                                </tr>
+                                <!--  =========================== The footer ===========================  -->
+
+                                <tr><td height='28'>&nbsp;</td></tr>
+
+                            </table>
+                        </td>
+                        <td width='20'>&nbsp;</td>
+                    </tr>
+
+                </table>
+            </td>
+        </tr>
+
+    </table>
+
+    </body>
+    </html>
+
 
 {%- endblock -%}
